Fixed layout of inline fields on mobile

--- a/health/sass/components/typography/fields/_module.scss
+++ b/health/sass/components/typography/fields/_module.scss
@@ -33,6 +33,11 @@
 
 // Stacked vs inline
 .field-label-inline {
+    clear: both;
+    @include uikit-media(sm) {
+      clear: none;
+    }
+
     .field-label {
         @extend %field-label;
         margin-right: uikit-space(0.25);
